changed website — added coding journal, tiny corgi and blue pink

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	
 	<style>
-		.container{
+.container{
   height: 500px;
   width: 200px;
   display: flex;
@@ -82,56 +82,7 @@
       justify-content:center;
       position: relative;
 }
-.circle7 {
-      width: 100px;
-      height: 100px;
-      background: #ECD9F4;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content:center;
-      position: relative;
-}
-.circle8 {
-      width: 100px;
-      height: 100px;
-      background: #D6EAD4;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content:center;
-      position: relative;
-}
-.circle9 {
-      width: 100px;
-      height: 100px;
-      background: #A1300E;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content:center;
-      position: relative;
-}
-.circle10{
-      width: 100px;
-      height: 100px;
-      background: #D1F2EB;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content:center;
-      position: relative;
-}
-.circle11 {
-      width: 100px;
-      height: 100px;
-      background: #B97999;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content:center;
-      position: relative;
-}
+
 .para {
       font-family:Arial;
       font-style: italic;
@@ -161,6 +112,11 @@
 
 .circle2:hover .tooltiptext {
   visibility: visible;
+}
+
+.circle3:hover{
+	background-image:url(corgi.png);
+	background-size:contain;
 }
 .circle3:hover .tooltiptext {
   visibility: visible;
@@ -202,18 +158,18 @@
   <h2 class=para> leela's projects </h2>
   <div class=tooltip>
   </div>
- <a href="blue-pink.html"> <div class=circle1> <span class=tooltiptext> project  <br> name  <br>
+ <a href="blue-pink.html"> <div class=circle1> <span class=tooltiptext> blue/ <br> pink
 </span><span></span></div>
 </a>
 
-
-
     <div class=blank></div>
-  <div class=circle2><span class=tooltiptext> project  <br> name  </span>
+   <a href="journal.html"><div class=circle2><span class=tooltiptext> journal  </span>
  </div>  
 <div class=blank></div>
-<div class=circle3><span class=tooltiptext> project  <br> name </span></div>
+
+<a href= "tinycorgi.html"><div class=circle3><span class=tooltiptext> </span></div>
 <div class=blank></div>
+
 <div class=circle4><span class=tooltiptext> project  <br> name  </span></div>
 <div class=blank></div>
 <div class=circle5><span class=tooltiptext> project  <br> name  </span></div>
