room design addition and journal entry

--- a/index-draft.html
+++ b/index-draft.html
@@ -158,7 +158,7 @@
   <h2 class=para> leela's projects </h2>
   <div class=tooltip>
   </div>
- <a href="blue-pink.html"> <div class=circle1> <span class=tooltiptext>very <br>first <br> project
+ <a href="blue-pink.html"> <div class=circle1> <span class=tooltiptext> blue/ <br> pink
 </span><span></span></div>
 </a>
 
@@ -170,7 +170,7 @@
 <a href= "tinycorgi.html"><div class=circle3><span class=tooltiptext> </span></div>
 <div class=blank></div>
 
-<a href="roomdesign.html"><div class=circle4><span class=tooltiptext> room  <br> design  </span></div>
+<div class=circle4><span class=tooltiptext> project  <br> name  </span></div>
 <div class=blank></div>
 <div class=circle5><span class=tooltiptext> project  <br> name  </span></div>
 <div class=blank></div>
