--- a/journal.html
+++ b/journal.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <title> leela's journal</title>
 <p class="para">october 21, 2019<br><br>hi! this is my coding journal. i'm leela, a 14 year old girl who likes to code! i'm currently working on a scratch project called "tiny corgi". it's a platform game that's really cute! i love this all lower-case, gray, bold, italic, arial font.</p>
-
+<p class= "para">october 25, 2019<br><br>i added a few new elements to my journal, including a link to the scratch project i'm working on. i'm doing some research on how to make a murder mystery game for my big project. i think i'm going to make it in scratch.</p>
+<p class= "para">october 29, 2019<br><br>i've decided i'm going to try woof js to break my habit of codeing with scratch, by using a middle ground between easy coding and real coding.</p>
 <style>
 .para {
 	font-family:Arial;
