i added one and a half journal entries

--- a/journal.html
+++ b/journal.html
@@ -2,7 +2,9 @@
 <title> leela's journal</title>
 <p class="para">october 21, 2019<br><br>hi! this is my coding journal. i'm leela, a 14 year old girl who likes to code! i'm currently working on a scratch project called "tiny corgi". it's a platform game that's really cute! i love this all lower-case, gray, bold, italic, arial font.</p>
 <p class= "para">october 25, 2019<br><br>i added a few new elements to my journal, including a link to the scratch project i'm working on. i'm doing some research on how to make a murder mystery game for my big project. i think i'm going to make it in scratch.</p>
-<p class= "para">october 29, 2019<br><br>i've decided i'm going to try woof js to break my habit of codeing with scratch, by using a middle ground between easy coding and real coding.</p>
+<p class= "para">october 29, 2019<br><br>i've decided i'm going to try woof js to break my habit of coding with scratch, by using a middle ground between easy coding and real coding.</p>
+<p class= "para"> november 28/9, 2019 <br><br>i just remembered that this journal still exists, which is a crazy coincidence because it's been excactly one month since my last entry- as if i had a built-in reminder/timer in my head that knew to go off after a month of posting! (am i the only one who finds this crazy?) Anyways, since my last entry, i've been working on the fizzbuzz project, a new "escape-the-room" project, and learning how to make javascript functions.</p>
+<p class= "para"> pt.2 of november 8/9<br><br>i forgot to mention- i went to a computer science competition last weekend! i went to the pclassic with the dalton com sci team members. it was mostly complicated math that i couldn't understand, but it was still very fun. also, i'm finally pushing this on my own without making molly help me with it (hooray!)</p>
 <style>
 .para {
 	font-family:Arial;
