i added all the requirements for break

--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
 
 <a href="roomdesign.html"><div class=circle4><span class=tooltiptext> room  <br> design  </span></div>
 <div class=blank></div>
-<div class=circle5><span class=tooltiptext> project  <br> name  </span></div>
+<a href="cherryblossoms.html"><div class=circle5><span class=tooltiptext> cherry  <br> blossoms  </span></div>
 <div class=blank></div>
-<div class=circle6><span class=tooltiptext> project  <br> name  </span></div>
+<a href="fizzbuzz.html"><div class=circle6><span class=tooltiptext> fizz  <br> buzz  </span></div>
 <div class=blank></div>
 <div class=circle7><span class=tooltiptext> project  <br> name  </span></div>
 <div class=blank></div>
