--- a/journal.html
+++ b/journal.html
@@ -5,6 +5,13 @@
 <p class= "para">october 29, 2019<br><br>i've decided i'm going to try woof js to break my habit of coding with scratch, by using a middle ground between easy coding and real coding.</p>
 <p class= "para"> november 28/9, 2019 <br><br>i just remembered that this journal still exists, which is a crazy coincidence because it's been excactly one month since my last entry- as if i had a built-in reminder/timer in my head that knew to go off after a month of posting! (am i the only one who finds this crazy?) Anyways, since my last entry, i've been working on the fizzbuzz project, a new "escape-the-room" project, and learning how to make javascript functions.</p>
 <p class= "para"> pt.2 of november 8/9<br><br>i forgot to mention- i went to a computer science competition last weekend! i went to the pclassic with the dalton com sci team members. it was mostly complicated math that i couldn't understand, but it was still very fun. also, i'm finally pushing this on my own without making molly help me with it (hooray!)</p>
+<p class="para"> december 3, 2019><br><br> i've been trying to do the computer science team test preps, but it's very difficult to coordinate, plus the javascript is super confusing. i think i'll start doing codeacademy again.</p>
+<p class="para"> december 7, 2019><br><br> 
+i've been working on my escape the room project. i decided to theme it based off of a cartoon that i used to watch called miffy. </p>
+<p class="para"> december 14, 2019><br><br> i finished my first escape room! spoiler: a duck pops up when you click on the sink tap in the kitchen. the 1 down, 8 more to go.</p>
+<p class="para"> december 17, 2019><br><br> i finished the second escape room puzzle! spoiler: you have to fill in a rainbow in the order of some colored pencils. this one was glitching a lot because of the layers of the rainbow, but it also fixed another glitch that was happening.</p>
+<p class="para"> december 19, 2019><br><br> i forgot to say this earlier, but i finished my favascript function with molly last week. also, i did the "fizzbuzz" challenge on scratch. it works! i'm going to post all of my diary entries for the month tommorow.</p>
+
 <style>
 .para {
 	font-family:Arial;
