journal update and plenty of fish

--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
       justify-content:center;
       position: relative;
 }
+.circle7 {
+      width: 100px;
+      height: 100px;
+      background: lightblue;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content:center;
+      position: relative;
+}
 
 .para {
       font-family:Arial;
@@ -176,7 +186,7 @@
 <div class=blank></div>
 <a href="fizzbuzz.html"><div class=circle6><span class=tooltiptext> fizz  <br> buzz  </span></div>
 <div class=blank></div>
-<div class=circle7><span class=tooltiptext> project  <br> name  </span></div>
+<a href="plentyoffish.html"><div class=circle7><span class=tooltiptext> plenty  <br> of <br> fish  </span></div>
 <div class=blank></div>
 <div class=circle8><span class=tooltiptext> project  <br> name  </span></div> 
 <div class=blank></div>
