adding new files

--- a/cherryblossoms.html
+++ b/cherryblossoms.html
@@ -1,18 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-	
-</head>
 <body>
-	<div></div>
-
-<!-- 
- --><script>
-
-// function sayHi(x) {
-// 	console.log("Hello " + x +"!")
-
-// }
+<script>
 
 
 	function makeTree(){
