--- a/plentyoffish.html
+++ b/plentyoffish.html
@@ -7,8 +7,10 @@
 <body>
 	<script>
 	</script>
-<h class="para"> plenty of fish in the sea</h>
-<p class= "para">here is a very rough draft of an assignment where multiple divs move.</p>
+<h class="para"> ~plenty of fish in the sea~</h>
+<p class= "para">here is a very rough draft of an assignment where multiple divs move. i have no idea how to use javascript, so I made something in html and css to start.</p>
+<p class="para"> code sketch: <br>- make five divs from one class<br>- program class so fish go back and forth <br>- set background to blue/ocean</p>
+<p class="para"> issues: <br>the current code sketch only works in css and html, and doesn't have any movement because there isn't any js. </p>
 <a class= "para" href="https://codepen.io/leelamukherjeesze/pen/JjoQBOK">click here for codepen</a>
 <style>
 	.para{
