new journal  and posts

--- a/index.html
+++ b/index.html
@@ -92,7 +92,26 @@
       justify-content:center;
       position: relative;
 }
-
+.circle8 {
+      width: 100px;
+      height: 100px;
+      background: lightblue;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content:center;
+      position: relative;
+}
+.circle9 {
+      width: 100px;
+      height: 100px;
+      background: lightblue;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content:center;
+      position: relative;
+}
 .para {
       font-family:Arial;
       font-style: italic;
@@ -173,28 +192,41 @@
 </a>
 
     <div class=blank></div>
-   <a href="journal.html"><div class=circle2><span class=tooltiptext> journal  </span>
+
+   <a href="quarentine.html"><div class=circle2><span class=tooltiptext> quarentine <br>>journal </span>
+ </div>  
+<div class=blank></div>   
+
+<a href="journal.html"><div class=circle3><span class=tooltiptext> journal </span>
  </div>  
 <div class=blank></div>
 
-<a href= "tinycorgi.html"><div class=circle3><span class=tooltiptext> </span></div>
+<a href= "tinycorgi.html"><div class=circle4><span class=tooltiptext> </span></div>
 <div class=blank></div>
 
-<a href="roomdesign.html"><div class=circle4><span class=tooltiptext> room  <br> design  </span></div>
+<a href="roomdesign.html"><div class=circle5><span class=tooltiptext> room  <br> design  </span></div>
 <div class=blank></div>
-<a href="cherryblossoms.html"><div class=circle5><span class=tooltiptext> cherry  <br> blossoms  </span></div>
+
+<a href="cherryblossoms.html"><div class=circle6><span class=tooltiptext> cherry  <br> blossoms  </span></div>
 <div class=blank></div>
-<a href="fizzbuzz.html"><div class=circle6><span class=tooltiptext> fizz  <br> buzz  </span></div>
+
+<a href="fizzbuzz.html"><div class=circle7><span class=tooltiptext> fizz  <br> buzz  </span></div>
 <div class=blank></div>
-<a href="plentyoffish.html"><div class=circle7><span class=tooltiptext> plenty  <br> of <br> fish  </span></div>
+
+<a href="plentyoffish.html"><div class=circle8><span class=tooltiptext> plenty  <br> of <br> fish  </span></div>
 <div class=blank></div>
-<div class=circle8><span class=tooltiptext> project  <br> name  </span></div> 
+
+<a href="sprinkles.html"><div class=circle9><span class=tooltiptext> sprinkles </span></div> 
 <div class=blank></div>
-<div class=circle9><span class=tooltiptext> project  <br> name  </span></div>
+
+<a href="miffygame.html"><div class=circle9><span class=tooltiptext> puzzle  <br> game  </span></div>
 <div class=blank></div>
-<div class=circle10><span class=tooltiptext> project  <br> name  </span></div>
+
+<a href="circles.html"> <div class=circle10><span class=tooltiptext> p5js <br> project  </span></div>
 <div class=blank></div>
-<div class=circle11><span class=tooltiptext> project  <br> name  </span></div>
+
+<div class=circle11><span class=tooltiptext> retired  <br> projects  </span></div>
+
 <p class= por>-</p>
 </div>
 <body style="text-align:center;">
