--- a/plentyoffish.html
+++ b/plentyoffish.html
@@ -12,6 +12,7 @@
 <p class="para"> code sketch: <br>- make five divs from one class<br>- program class so fish go back and forth <br>- set background to blue/ocean</p>
 <p class="para"> issues: <br>the current code sketch only works in css and html, and doesn't have any movement because there isn't any js. </p>
 <a class= "para" href="https://codepen.io/leelamukherjeesze/pen/JjoQBOK">click here for codepen</a>
+<a class= "para" href="movingjavascript.html">click here for javascipt drafting</a>
 <style>
 	.para{
 		font-family: Arial;
