--- a/tinycorgi.html
+++ b/tinycorgi.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<a href="https://scratch.mit.edu/projects/191187470/editor/" class="link">tiny corgi scratch code</a>
-<p class="link">here's a project that i've been working on. i think it's really cute!</p>
+<iframe src="https://scratch.mit.edu/projects/191187470/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<a href="https://scratch.mit.edu/projects/191187470" class="link">tiny corgi scratch code</a>
+<p class="link">here's a project that i've been working on. i think it's really cute! the code itself wasn't particularly challenging,  because i followed a tutorial, but i still. got a lot out of this project. for this project, i basically had to simulate gravity using code, which i think was a very interesting. process. </p>
 <style>
 .link {
 	font-family:Arial;
