updated journal entries and new posts for games

--- a/journal.html
+++ b/journal.html
@@ -15,7 +15,7 @@ i've been working on my escape the room project. i decided to theme it based off
 <p class="para"> january 1, 2020<br><br> first journal entry of the new year! (and decade). this year i want to work on being able to code using javascript </p>
 <p class="para"> january 24, 2020<br><br> my sister's birthday was yesterday. it was at the ice cream museum, which makes me want to do a coding project with sprinkles! </p>
 <p class="para"> february 1, 2020<br><br> i'm updating my personal website today. i'll add an entry about my miffy escape the room game! it's almost finished, but it keeps glitching :(</p>
-
+<p class="para"> april-may-ish confusion, 2020<br><br>i sort of abandoned my journal for a bit there (spring break and the beginning of coronavirus quarentining began) so i've made a new journal so i can ~start afresh~.</p>
 <style>
 .para {
 	font-family:Arial;
